--- a/.github/workflows/.development-workflow.yml
+++ b/.github/workflows/.development-workflow.yml
@@ -2,10 +2,13 @@ name: Development Workflow
 
 on:
   workflow_dispatch:
-  #push:
-  #  branches:
-  #    - main
-  #    - develop
+  push:
+    branches:
+      - main
+      - develop
+      - "feature/**"
+      - "release/**"
+      - "hotfix/**"
 
 jobs:
   _Init_:
@@ -36,6 +39,7 @@ jobs:
         id: generate-image-tag
         run: |
           echo "image-tag=$(Get-Date -Format "yy.M.d.Hmm")" >> $env:GITHUB_OUTPUT
+
       - name: Process string case of repo type
         id: set-LC-repo-type
         uses: ASzc/change-string-case-action@v5
@@ -55,13 +59,15 @@ jobs:
     with:
       RUNS_ON: ${{ vars.RUNS_ON }}
       ENVIRONMENT: DEV
-      APP_NAME: ${{ needs.setup.outputs.APP_NAME }}
-      IMAGE_TAG: ${{ needs.setup.outputs.IMAGE_TAG }}
+      PRODUCT: ${{ needs._Init_.outputs.product }}
+      APP_NAME: ${{ needs._Init_.outputs.app-name }}
+      IMAGE_TAG: ${{ needs._Init_.outputs.image-tag }}
       REACT_DOTENV_FILE: .env.development
-      DOCKER_REGISTRY: ${{ vars.ARTIFACTORY_DOCKER_REGISTRY }}
-      ARTIFACTORY_REPO_PATH: ${{ vars.ARTIFACTORY_REPO_PATH_DEV }}
+      DOCKER_REGISTRY: ${{ needs._Init_.outputs.artifactory }}
+      REPO_TYPE: ${{ needs._Init_.outputs.repo-type }}
     secrets:
       CERT_HA_ROOT_CA: ${{ secrets.CERT_HA_ROOT_CA }}
+      CERT_HA_TRIAL_ROOT_CA: ${{ secrets.CERT_HA_TRIAL_ROOT_CA }}
       MVN_CONFIG: ${{ secrets.MVN_CONFIG }}
       MVN_SETTINGS: ${{ secrets.MVN_SETTINGS_DEV }}
       ARTIFACTORY_USER: ${{ secrets.ARTIFACTORY_USER_DEV }}
