--- a/.github/workflows/.staging-workflow.yml
+++ b/.github/workflows/.staging-workflow.yml
@@ -2,13 +2,13 @@ name: Staging Workflow
 
 on:
   workflow_dispatch:
-  # push:
-  #   branches:
-  #     - main
-  #     - develop
-  #     - "feature/**"
-  #     - "release/**"
-  #     - "hotfix/**"
+  push:
+    branches:
+      - main
+      - develop
+      - "feature/**"
+      - "release/**"
+      - "hotfix/**"
 
 jobs:
   _Init_:
