--- a/openshift-prd/kwh-its-data-svc.yaml
+++ b/openshift-prd/kwh-its-data-svc.yaml
@@ -8,7 +8,7 @@ metadata:
     app.kubernetes.io/component: backend
     app.kubernetes.io/part-of: kwh-its
   annotations:
-    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"kwh-its-alarm-svc"}]'
+    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment"}]'
 spec:
   replicas: 1
   selector:
