--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,6 @@
 # Spring Data JPA
 spring.datasource.url=jdbc:mysql://mql032vmcprd61a:40005,mql032vmcprd61b:40005,mql032vmcprd61c:40005,mql032vmcprd81a:40005,mql032vmcprd81b:40005/kwh_its_dev?autoReconnect=true&failOverReadOnly=false&maxReconnects=10
+#spring.datasource.url=jdbc:mysql://mql032vmcprd61a:40006,mql032vmcprd61b:40006,mql032vmcprd61c:40006,mql032vmcprd81a:40006,mql032vmcprd81b:40006/kwh_its_dev?autoReconnect=true&failOverReadOnly=false&maxReconnects=10
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
 spring.jpa.hibernate.ddl-auto=none
@@ -10,7 +11,7 @@ spring.datasource.hikari.minimumIdle=5
 spring.datasource.hikari.maximumPoolSize=20
 spring.datasource.hikari.idleTimeout=30000
 spring.datasource.hikari.poolName=SpringBootHikariCP
-spring.datasource.hikari.maxLifetime=2000000
+spring.datasource.hikari.maxLifetime=1800000
 spring.datasource.hikari.connectionTimeout=30000
 # Keycloak
 keycloak.realm=Kwh
@@ -29,7 +30,8 @@ kwh.its.key=${KWH_ITS_KEY}
 # AUTH
 app.auth.api.path=https://kcc-auth-svc-kccclinical-stag-prd.prdcld61.server.ha.org.hk/api/v1/auth/
 #Calendar
-app.calendar.api.path=https://kcc-calendar-svc-kccclinical-stag-prd.prdcld61.server.ha.org.hk/api/v1/calendar/public-holiday?startDate=
+#app.calendar.api.path=https://kcc-calendar-svc-kccclinical-stag-prd.prdcld61.server.ha.org.hk/api/v1/calendar/public-holiday?startDate=
+app.calendar.api.path=https://kcc-calendar-svc-kccinfo-common-prd.cldkwhprd1.server.ha.org.hk/api/v1/calendar/public-holiday?startDate=
 # password
 app.auth.api.password=${KWH_ITS_PASSWORD}
 app.auth.api.user=${KWH_ITS_USER}
