--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -31,7 +31,8 @@ kwh.its.key=${KWH_ITS_KEY}
 app.auth.api.path=https://kcc-auth-svc-kccclinical-stag-prd.prdcld61.server.ha.org.hk/api/v1/auth/
 #Calendar
 #app.calendar.api.path=https://kcc-calendar-svc-kccclinical-stag-prd.prdcld61.server.ha.org.hk/api/v1/calendar/public-holiday?startDate=
-app.calendar.api.path=https://kcc-calendar-svc-kccinfo-common-prd.cldkwhprd1.server.ha.org.hk/api/v1/calendar/public-holiday?startDate=
+#app.calendar.api.path=https://kcc-calendar-svc-kccinfo-common-prd.cldkwhprd1.server.ha.org.hk/api/v1/calendar/public-holiday?startDate=
+app.calendar.api.path=https://kcc-calendar-svc-kccinfo-common-dev.cldkwhtst1.server.ha.org.hk/api/v1/calendar/public-holiday?startDate=
 # password
 app.auth.api.password=${KWH_ITS_PASSWORD}
 app.auth.api.user=${KWH_ITS_USER}
